--- a/index.html
+++ b/index.html
@@ -6,33 +6,33 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="stylesheet" href="https://luisgerar321.github.io/remo/styles/index.css"> -->
+        <!-- <link rel="stylesheet" href="https://marianamendoza23.github.io/remo-templates/styles/index.css"> -->
     </head>
     <body >
     
-    <link rel="stylesheet" href="https://luisgerar321.github.io/remo/styles/index.css">
+    <link rel="stylesheet" href="https://marianamendoza23.github.io/remo-templates/styles/index.css">
     <div class = "card-container">
         <div class="card">
             <div class="greeting">
                 <div class="text">
                     <H2> Hi {{CANDIDATE_FIRST_NAME}}, </H2> 
                     <div class="emogie">
-                        <img  class="emoticon" src="https://luisgerar321.github.io/remo/styles/img/woman-raising-hand-type-1-2-647.png">
+                        <img  class="emoticon" src="https://marianamendoza23.github.io/remo-templates/styles/img/woman-raising-hand-type-1-2-647.png">
                     </div>
                 </div>
 
                 <div class="img">
-                    <img class="logo" src="https://luisgerar321.github.io/remo/styles/img/logo.PNG">
+                    <img class="logo" src="https://marianamendoza23.github.io/remo-templates/styles/img/logo.PNG">
                 </div>
 
             </div>
     
             <div class="congrats">
-                <img  class="emoticon" src="https://luisgerar321.github.io/remo/styles/img/party-popper_1f389.png">
+                <img  class="emoticon" src="https://marianamendoza23.github.io/remo-templates/styles/img/party-popper_1f389.png">
                 <p>
                     <strong>Congratulations! you have been selected from over 500+ applicants, and we're excited to move to the next steps of the process!</strong>
                 </p>
-                <img  class="emoticon" src="https://luisgerar321.github.io/remo/styles/img/party-popper_1f389.png">
+                <img  class="emoticon" src="https://marianamendoza23.github.io/remo-templates/styles/img/party-popper_1f389.png">
             </div>
             <div class="message-container">
                 <h3>Here's what to expect moving forward:</h3>
