--- a/index2.html
+++ b/index2.html
@@ -6,12 +6,12 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="stylesheet" href="https://luisgerar321.github.io/remo/styles/index.css"> -->
+    <!-- <link rel="stylesheet" href="https://marianamendoza23.github.io/remo-templates/styles/index.css"> -->
   </head>
   <body>
     <link
       rel="stylesheet"
-      href="https://luisgerar321.github.io/remo/styles/index.css"
+      href="https://marianamendoza23.github.io/remo-templates/styles/index.css"
     />
     <div class="card-container">
       <div class="card">
@@ -21,7 +21,7 @@
             <div class="emogie">
               <img
                 class="emoticon"
-                src="https://luisgerar321.github.io/remo/styles/img/woman-raising-hand-type-1-2-647.png"
+                src="https://marianamendoza23.github.io/remo-templates/styles/img/woman-raising-hand-type-1-2-647.png"
               />
             </div>
           </div>
@@ -29,7 +29,7 @@
           <div class="img">
             <img
               class="logo"
-              src="https://luisgerar321.github.io/remo/styles/img/logo.PNG"
+              src="https://marianamendoza23.github.io/remo-templates/styles/img/logo.PNG"
             />
           </div>
         </div>
@@ -37,7 +37,7 @@
         <div class="congrats">
           <img
             class="emoticon"
-            src="https://luisgerar321.github.io/remo/styles/img/party-popper_1f389.png"
+            src="https://marianamendoza23.github.io/remo-templates/styles/img/party-popper_1f389.png"
           />
           <p>
             <strong
@@ -47,7 +47,7 @@
           </p>
           <img
             class="emoticon"
-            src="https://luisgerar321.github.io/remo/styles/img/party-popper_1f389.png"
+            src="https://marianamendoza23.github.io/remo-templates/styles/img/party-popper_1f389.png"
           />
         </div>
         <div class="message-container">
